fixed dishwash vs handwash and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,8 @@ code {
   overflow: hidden;
 }
 
-.secondsection, .thirdsection {
-  padding: 2rem;
+.secondsection {
+  padding: 3rem;
 }
 
 /* The Modal (background) */
@@ -96,12 +96,55 @@ code {
   width: 20%;
 }
 
+#waterpond {
+  float: left;
+  width: 20%;
+}
+
+#freshwaterparagraph {
+  float: right;
+  width: 70%;
+}
+
+.thirdsection {
+  padding: 5rem; 
+  float: left;
+  width: 70%;
+  text-align: left;
+}
+
+#dailyhabitsparagraph {
+  float: left;
+  width: 70%;
+}
+
+#shower {
+  float: right;
+  width: 20%;
+}
+
 @media (max-width: 800px){
   .firstsection img {
     display: none;
   }
 
   .waterparagraph {
+    width: 100%;
+  }
+
+  .secondsection img {
+    display: none;
+  }
+
+  #freshwaterparagraph {
+    width: 100%;
+  }
+
+  .thirdsection img {
+    display: none;
+  }
+
+  #dailyhabitsparagraph {
     width: 100%;
   }
 }
